acl_switch can recognise IPv4 source and destination addresses stored in ACL

--- a/firewall_stateless.py.1
+++ b/firewall_stateless.py.1
@@ -34,11 +34,11 @@ from ryu.lib.packet import packet
 from ryu.lib.packet import ethernet
 
 
-class SimpleSwitch13(app_manager.RyuApp):
+class StatelessFirewallSwitch(app_manager.RyuApp):
     OFP_VERSIONS = [ofproto_v1_3.OFP_VERSION]
 
     def __init__(self, *args, **kwargs):
-        super(SimpleSwitch13, self).__init__(*args, **kwargs)
+        super(StatelessFirewallSwitch, self).__init__(*args, **kwargs)
         self.mac_to_port = {}
 
     @set_ev_cls(ofp_event.EventOFPSwitchFeatures, CONFIG_DISPATCHER)
